--- a/index.html
+++ b/index.html
@@ -8,27 +8,42 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div class="about">
-        <div class="presentation">
-            <p class="txt-presentation">
-                Hola! Soy Alan,
-            </p>
+    <nav class="navbar">
+        <div class="logo">
+            SOY EL LOGO
         </div>
-
-        <div class="description">
-            <p class="txt-description">
-                un <span class="description-detail">Full-Stack developer</span> buscando siempre expandir sus limites y creyente de que el conocimiento se construye horizontalmente y en equipo.
-                <br>
-                <br>
-                ¿Te gustaria que trabajemos juntos? <strong>charlemos!</strong>
-            </p>
-        </div>
-
-        <hr style="width: 80%;">
         
-    </div>
+        <div class="nav-menu">
+            <ul class="nav-menu-ul">
+                <li class="nav-item item1">item1</li>
+                <li class="nav-item item2">item2</li>
+                <li class="nav-item item3">item3</li>
+            </ul>
+        </div>
+    </nav>
 
+    <section class="about"> 
+        <div class="profile">
+            <img src="" alt="" class="img-profile">
+        </div>
+        <p class="description">
+
+        </p>
+    </section>
+
+
+    <footer class="footer">
+        <div>Soy el footer</div>
+    </footer>
+
+    
+    <!-- <h1>Probando MENU HAMBURGUESA</h1>
+
+    <div class="container">
+        <div class="baseline line1"></div>
+        <div class="baseline line2"></div>
+        <div class="baseline line3"></div>
+    </div> -->
 
 
 </body>
