--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
         </div>
         
         <div class="nav-menu">
-            <ul class="nav-menu-ul">
+
+            <div class="container">
+                <div class="baseline line1"></div>
+                <div class="baseline line2"></div>
+                <div class="baseline line3"></div>
+            </div>
+
+            <!-- <ul class="nav-menu-ul">
                 <li class="nav-item item1">item1</li>
                 <li class="nav-item item2">item2</li>
                 <li class="nav-item item3">item3</li>
-            </ul>
+            </ul> -->
         </div>
     </nav>
 
@@ -48,13 +55,8 @@
     </footer>
 
     
-    <!-- <h1>Probando MENU HAMBURGUESA</h1>
 
-    <div class="container">
-        <div class="baseline line1"></div>
-        <div class="baseline line2"></div>
-        <div class="baseline line3"></div>
-    </div> -->
+
 
 
 </body>
